<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/black_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/data_layout"
        android:padding="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_account"
            android:id="@+id/account_img"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            tools:text="@string/name"
            android:textColor="@color/grey_light"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_text"
            tools:text="@string/email"
            android:textColor="@color/grey_light"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_text"
            tools:text="@string/phone"
            android:textColor="@color/grey_light"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description_text"
            tools:text="@string/description"
            android:textColor="@color/white"
            android:layout_marginVertical="20dp"
            android:textSize="20sp"/>

        <include
            layout="@layout/separator_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobs"
            android:textColor="@color/grey_light"
            android:layout_marginVertical="20dp" />

        <include
            layout="@layout/separator_line" />

        <TextView
            android:id="@+id/no_jobs_founded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_jobs"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginVertical="20dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_jobs_recycler"
            android:visibility="visible"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/data_layout"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>