<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:id="@+id/data_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textSize="12sp"
        android:textColor="@color/black_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/data_title"
        android:padding="20dp">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/grey"
            android:id="@+id/name_edit"
            android:layout_marginVertical="5dp" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/last_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/grey"
            android:id="@+id/last_name_edit"
            android:layout_marginVertical="5dp" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/grey"
            android:id="@+id/email_edti"
            android:layout_marginVertical="5dp" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/grey"
            android:id="@+id/phone_edit"
            android:layout_marginVertical="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/finalize"
            android:backgroundTint="@color/app_color"
            android:layout_marginTop="30dp"
            android:id="@+id/finalize_change_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>