<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="40dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/layout_view"
    tools:context=".presentation.auth.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/grey"
        android:id="@+id/login_email"
        android:layout_marginVertical="5dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/grey"
        android:id="@+id/login_password"
        android:layout_marginVertical="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:backgroundTint="@color/app_color"
        android:layout_marginVertical="40dp"
        android:id="@+id/login_button" />

</LinearLayout>